syntax = "proto3";

option csharp_namespace = "B2Connect.ERP.Grpc";

package erp.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// =============================================================================
// PIM Service - Product Information Management
// =============================================================================

service PimService {
  // Single product operations
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc GetProducts(GetProductsRequest) returns (ProductsResponse);
  
  // Streaming for large datasets (.NET Framework 4.8 compatible via gRPC streaming)
  rpc StreamProducts(StreamProductsRequest) returns (stream ProductResponse);
  rpc StreamProductChanges(StreamChangesRequest) returns (stream ProductChangeEvent);
  
  // Category operations
  rpc GetCategories(GetCategoriesRequest) returns (CategoriesResponse);
  rpc GetCategoryTree(GetCategoryTreeRequest) returns (CategoryTreeResponse);
  
  // Pricing operations
  rpc GetProductPricing(GetPricingRequest) returns (PricingResponse);
  rpc GetBulkPricing(GetBulkPricingRequest) returns (BulkPricingResponse);
  
  // Stock operations
  rpc GetProductStock(GetStockRequest) returns (StockResponse);
  rpc GetBulkStock(GetBulkStockRequest) returns (BulkStockResponse);
  
  // Health check
  rpc CheckHealth(HealthRequest) returns (HealthResponse);
}

// =============================================================================
// CRM Service - Customer Relationship Management
// =============================================================================

service CrmService {
  // Customer operations
  rpc GetCustomer(GetCustomerRequest) returns (CustomerResponse);
  rpc GetCustomerByNumber(GetCustomerByNumberRequest) returns (CustomerResponse);
  rpc SearchCustomers(SearchCustomersRequest) returns (CustomersResponse);
  
  // Streaming
  rpc StreamCustomers(StreamCustomersRequest) returns (stream CustomerResponse);
  rpc StreamCustomerChanges(StreamChangesRequest) returns (stream CustomerChangeEvent);
  
  // Contact operations
  rpc GetContacts(GetContactsRequest) returns (ContactsResponse);
  
  // Customer-specific pricing
  rpc GetCustomerPricing(GetCustomerPricingRequest) returns (CustomerPricingResponse);
  
  // Order history
  rpc GetOrderHistory(GetOrderHistoryRequest) returns (OrderHistoryResponse);
  
  // Health check
  rpc CheckHealth(HealthRequest) returns (HealthResponse);
}

// =============================================================================
// ERP Service - Order Management
// =============================================================================

service ErpService {
  // Order operations
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (OrdersResponse);
  
  // Document operations
  rpc GetDocument(GetDocumentRequest) returns (DocumentResponse);
  rpc GetDocuments(GetDocumentsRequest) returns (DocumentsResponse);
  
  // Health check
  rpc CheckHealth(HealthRequest) returns (HealthResponse);
}

// =============================================================================
// Sync Service - Master Data Synchronization (Hybrid Strategy)
// =============================================================================

service SyncService {
  // Incremental sync operations (for large catalogs: 1.5M+ articles, 30M+ attributes)
  
  // Article synchronization
  rpc SyncArticles(SyncArticlesRequest) returns (SyncResponse);
  rpc GetArticleChanges(GetChangesRequest) returns (stream ArticleChangeEvent);
  
  // Attribute synchronization (Merkmale)
  rpc SyncAttributes(SyncAttributesRequest) returns (SyncResponse);
  rpc GetAttributeChanges(GetChangesRequest) returns (stream AttributeChangeEvent);
  
  // Image/Media synchronization
  rpc SyncImages(SyncImagesRequest) returns (SyncResponse);
  rpc GetImageChanges(GetChangesRequest) returns (stream ImageChangeEvent);
  
  // Category synchronization
  rpc SyncCategories(SyncCategoriesRequest) returns (SyncResponse);
  rpc GetCategoryChanges(GetChangesRequest) returns (stream CategoryChangeEvent);
  
  // Full sync orchestration (staged: Articles → Attributes → Images → Categories)
  rpc StartFullSync(FullSyncRequest) returns (SyncResponse);
  rpc GetSyncStatus(GetSyncStatusRequest) returns (SyncOperationStatusResponse);
  
  // Watermark management (ModifiedDate tracking)
  rpc GetLastSyncWatermark(GetWatermarkRequest) returns (WatermarkResponse);
  rpc UpdateSyncWatermark(UpdateWatermarkRequest) returns (WatermarkResponse);
  
  // Health check
  rpc CheckHealth(HealthRequest) returns (HealthResponse);
}

// =============================================================================
// Common Messages
// =============================================================================

message TenantContext {
  string tenant_id = 1;
  string user_id = 2;
  string correlation_id = 3;
  map<string, string> metadata = 4;
}

message HealthRequest {
  TenantContext tenant = 1;
}

message HealthResponse {
  bool is_healthy = 1;
  string provider_name = 2;
  string version = 3;
  google.protobuf.Timestamp checked_at = 4;
  int64 response_time_ms = 5;
  map<string, bool> component_status = 6;
  string error_message = 7;
}

message PageInfo {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_count = 3;
  int32 total_pages = 4;
  bool has_more = 5;
}

message StreamChangesRequest {
  TenantContext tenant = 1;
  google.protobuf.Timestamp changed_since = 2;
  string change_token = 3;
}

// =============================================================================
// Product Messages
// =============================================================================

message GetProductRequest {
  TenantContext tenant = 1;
  string product_id = 2;
}

message GetProductsRequest {
  TenantContext tenant = 1;
  repeated string product_ids = 2;
}

message StreamProductsRequest {
  TenantContext tenant = 1;
  int32 page_size = 2;
  string category_id = 3;
  bool active_only = 4;
}

message ProductResponse {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  string short_description = 5;
  string category_id = 6;
  string category_name = 7;
  string manufacturer_id = 8;
  string manufacturer_name = 9;
  string brand = 10;
  google.protobuf.DoubleValue base_price = 11;
  string currency = 12;
  string tax_class = 13;
  google.protobuf.DoubleValue weight = 14;
  string weight_unit = 15;
  bool is_active = 16;
  bool is_in_stock = 17;
  google.protobuf.Int32Value stock_quantity = 18;
  repeated ProductAttribute attributes = 19;
  repeated ProductImage images = 20;
  repeated string related_product_ids = 21;
  google.protobuf.Timestamp created_at = 22;
  google.protobuf.Timestamp modified_at = 23;
  map<string, string> metadata = 24;
}

message ProductsResponse {
  repeated ProductResponse products = 1;
  PageInfo page_info = 2;
}

message ProductAttribute {
  string name = 1;
  string value = 2;
  string unit = 3;
  string group = 4;
  int32 sort_order = 5;
  bool is_filterable = 6;
  bool is_searchable = 7;
}

message ProductImage {
  string url = 1;
  string alt = 2;
  string title = 3;
  int32 sort_order = 4;
  bool is_primary = 5;
  string type = 6;
}

message ProductChangeEvent {
  string product_id = 1;
  ChangeType change_type = 2;
  google.protobuf.Timestamp changed_at = 3;
  string changed_by = 4;
  repeated string changed_fields = 5;
  ProductResponse product = 6;
}

// =============================================================================
// Category Messages
// =============================================================================

message GetCategoriesRequest {
  TenantContext tenant = 1;
  string parent_id = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetCategoryTreeRequest {
  TenantContext tenant = 1;
  string root_category_id = 2;
  int32 max_depth = 3;
}

message CategoriesResponse {
  repeated Category categories = 1;
  PageInfo page_info = 2;
}

message CategoryTreeResponse {
  repeated CategoryNode root_categories = 1;
  int32 total_categories = 2;
  int32 max_depth = 3;
}

message Category {
  string id = 1;
  string name = 2;
  string parent_id = 3;
  string description = 4;
  string image_url = 5;
  int32 sort_order = 6;
  bool is_active = 7;
  int32 product_count = 8;
  int32 level = 9;
  string path = 10;
}

message CategoryNode {
  Category category = 1;
  repeated CategoryNode children = 2;
}

// =============================================================================
// Pricing Messages
// =============================================================================

message GetPricingRequest {
  TenantContext tenant = 1;
  string product_id = 2;
  string customer_id = 3;
}

message GetBulkPricingRequest {
  TenantContext tenant = 1;
  repeated string product_ids = 2;
  string customer_id = 3;
}

message PricingResponse {
  string product_id = 1;
  double base_price = 2;
  google.protobuf.DoubleValue sale_price = 3;
  google.protobuf.DoubleValue customer_price = 4;
  string currency = 5;
  google.protobuf.DoubleValue tax_rate = 6;
  bool includes_tax = 7;
  repeated PriceTier tier_prices = 8;
  google.protobuf.Timestamp valid_from = 9;
  google.protobuf.Timestamp valid_until = 10;
}

message BulkPricingResponse {
  repeated PricingResponse prices = 1;
}

message PriceTier {
  int32 min_quantity = 1;
  google.protobuf.Int32Value max_quantity = 2;
  double price = 3;
  google.protobuf.DoubleValue discount_percent = 4;
}

// =============================================================================
// Stock Messages
// =============================================================================

message GetStockRequest {
  TenantContext tenant = 1;
  string product_id = 2;
  string warehouse_id = 3;
}

message GetBulkStockRequest {
  TenantContext tenant = 1;
  repeated string product_ids = 2;
  string warehouse_id = 3;
}

message StockResponse {
  string product_id = 1;
  int32 quantity = 2;
  google.protobuf.Int32Value reserved_quantity = 3;
  int32 available_quantity = 4;
  bool is_in_stock = 5;
  string warehouse_id = 6;
  string warehouse_name = 7;
  google.protobuf.Timestamp expected_restock_date = 8;
  google.protobuf.Timestamp last_updated = 9;
}

message BulkStockResponse {
  repeated StockResponse stocks = 1;
}

// =============================================================================
// Customer Messages
// =============================================================================

message GetCustomerRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
}

message GetCustomerByNumberRequest {
  TenantContext tenant = 1;
  string customer_number = 2;
}

message SearchCustomersRequest {
  TenantContext tenant = 1;
  string query = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message StreamCustomersRequest {
  TenantContext tenant = 1;
  int32 page_size = 2;
  bool active_only = 3;
}

message CustomerResponse {
  string id = 1;
  string customer_number = 2;
  string name = 3;
  string company_name = 4;
  string tax_id = 5;
  string vat_id = 6;
  string email = 7;
  string phone = 8;
  string fax = 9;
  string website = 10;
  CustomerType customer_type = 11;
  string customer_group_id = 12;
  string customer_group_name = 13;
  string price_group_id = 14;
  string sales_rep_id = 15;
  string payment_terms = 16;
  google.protobuf.DoubleValue credit_limit = 17;
  string currency = 18;
  string language = 19;
  bool is_active = 20;
  bool is_blocked = 21;
  string blocked_reason = 22;
  Address billing_address = 23;
  Address shipping_address = 24;
  repeated Address addresses = 25;
  repeated Contact contacts = 26;
  google.protobuf.Timestamp created_at = 27;
  google.protobuf.Timestamp modified_at = 28;
  map<string, string> metadata = 29;
}

message CustomersResponse {
  repeated CustomerResponse customers = 1;
  PageInfo page_info = 2;
}

message CustomerChangeEvent {
  string customer_id = 1;
  ChangeType change_type = 2;
  google.protobuf.Timestamp changed_at = 3;
  string changed_by = 4;
  repeated string changed_fields = 5;
  CustomerResponse customer = 6;
}

enum CustomerType {
  CUSTOMER_TYPE_UNSPECIFIED = 0;
  CUSTOMER_TYPE_BUSINESS = 1;
  CUSTOMER_TYPE_INDIVIDUAL = 2;
  CUSTOMER_TYPE_GOVERNMENT = 3;
  CUSTOMER_TYPE_NON_PROFIT = 4;
  CUSTOMER_TYPE_RESELLER = 5;
  CUSTOMER_TYPE_DISTRIBUTOR = 6;
}

message Address {
  string id = 1;
  AddressType type = 2;
  string name = 3;
  string company = 4;
  string street1 = 5;
  string street2 = 6;
  string city = 7;
  string state = 8;
  string postal_code = 9;
  string country_code = 10;
  string country_name = 11;
  string phone = 12;
  bool is_default = 13;
  bool is_active = 14;
}

enum AddressType {
  ADDRESS_TYPE_UNSPECIFIED = 0;
  ADDRESS_TYPE_BILLING = 1;
  ADDRESS_TYPE_SHIPPING = 2;
  ADDRESS_TYPE_BOTH = 3;
  ADDRESS_TYPE_OTHER = 4;
}

message Contact {
  string id = 1;
  string customer_id = 2;
  string first_name = 3;
  string last_name = 4;
  string salutation = 5;
  string title = 6;
  string position = 7;
  string department = 8;
  string email = 9;
  string phone = 10;
  string mobile = 11;
  string fax = 12;
  bool is_primary = 13;
  bool is_active = 14;
  repeated string roles = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp modified_at = 17;
}

message GetContactsRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
}

message ContactsResponse {
  repeated Contact contacts = 1;
}

message GetCustomerPricingRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
  repeated string product_ids = 3;
}

message CustomerPricingResponse {
  repeated CustomerPrice prices = 1;
}

message CustomerPrice {
  string customer_id = 1;
  string product_id = 2;
  double price = 3;
  string currency = 4;
  google.protobuf.DoubleValue discount_percent = 5;
  google.protobuf.Int32Value min_quantity = 6;
  google.protobuf.Timestamp valid_from = 7;
  google.protobuf.Timestamp valid_until = 8;
  string price_list_id = 9;
  string price_list_name = 10;
}

message GetOrderHistoryRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
  google.protobuf.Timestamp from_date = 3;
  google.protobuf.Timestamp to_date = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message OrderHistoryResponse {
  repeated OrderHistoryEntry orders = 1;
  PageInfo page_info = 2;
}

message OrderHistoryEntry {
  string order_id = 1;
  string order_number = 2;
  string customer_id = 3;
  google.protobuf.Timestamp order_date = 4;
  double total_amount = 5;
  string currency = 6;
  string status = 7;
  int32 item_count = 8;
  repeated OrderHistoryItem items = 9;
}

message OrderHistoryItem {
  string product_id = 1;
  string sku = 2;
  string name = 3;
  int32 quantity = 4;
  double unit_price = 5;
  double total_price = 6;
}

// =============================================================================
// Order Messages
// =============================================================================

message CreateOrderRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
  string customer_number = 3;
  string reference = 4;
  string comments = 5;
  google.protobuf.Timestamp requested_delivery_date = 6;
  Address billing_address = 7;
  Address shipping_address = 8;
  repeated OrderLineRequest lines = 9;
  string payment_method = 10;
  string shipping_method = 11;
  map<string, string> metadata = 12;
}

message OrderLineRequest {
  string product_id = 1;
  string sku = 2;
  int32 quantity = 3;
  string notes = 4;
}

message GetOrderRequest {
  TenantContext tenant = 1;
  string order_id = 2;
}

message GetOrdersRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
  google.protobuf.Timestamp from_date = 3;
  google.protobuf.Timestamp to_date = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message OrderResponse {
  string id = 1;
  string order_number = 2;
  string customer_id = 3;
  string customer_number = 4;
  google.protobuf.Timestamp order_date = 5;
  google.protobuf.Timestamp requested_delivery_date = 6;
  OrderStatus status = 7;
  string reference = 8;
  string comments = 9;
  Address billing_address = 10;
  Address shipping_address = 11;
  repeated OrderLine lines = 12;
  double sub_total = 13;
  double tax_amount = 14;
  double shipping_amount = 15;
  double discount_amount = 16;
  double total_amount = 17;
  string currency = 18;
  string payment_method = 19;
  string payment_terms = 20;
  string shipping_method = 21;
  google.protobuf.Timestamp created_at = 22;
  google.protobuf.Timestamp modified_at = 23;
  map<string, string> metadata = 24;
}

message OrdersResponse {
  repeated OrderResponse orders = 1;
  PageInfo page_info = 2;
}

message OrderLine {
  int32 line_number = 1;
  string product_id = 2;
  string sku = 3;
  string name = 4;
  int32 quantity = 5;
  google.protobuf.Int32Value quantity_shipped = 6;
  google.protobuf.Int32Value quantity_backordered = 7;
  double unit_price = 8;
  google.protobuf.DoubleValue discount_percent = 9;
  google.protobuf.DoubleValue discount_amount = 10;
  double tax_amount = 11;
  double total_price = 12;
  string notes = 13;
  google.protobuf.Timestamp expected_ship_date = 14;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_DRAFT = 1;
  ORDER_STATUS_SUBMITTED = 2;
  ORDER_STATUS_CONFIRMED = 3;
  ORDER_STATUS_PROCESSING = 4;
  ORDER_STATUS_PARTIALLY_SHIPPED = 5;
  ORDER_STATUS_SHIPPED = 6;
  ORDER_STATUS_DELIVERED = 7;
  ORDER_STATUS_COMPLETED = 8;
  ORDER_STATUS_CANCELLED = 9;
  ORDER_STATUS_ON_HOLD = 10;
}

// =============================================================================
// Document Messages
// =============================================================================

message GetDocumentRequest {
  TenantContext tenant = 1;
  string document_id = 2;
  bool include_content = 3;
}

message GetDocumentsRequest {
  TenantContext tenant = 1;
  string customer_id = 2;
  string order_id = 3;
  DocumentType type = 4;
  google.protobuf.Timestamp from_date = 5;
  google.protobuf.Timestamp to_date = 6;
  int32 page = 7;
  int32 page_size = 8;
}

message DocumentResponse {
  string id = 1;
  string document_number = 2;
  DocumentType type = 3;
  string customer_id = 4;
  string order_id = 5;
  google.protobuf.Timestamp document_date = 6;
  google.protobuf.DoubleValue total_amount = 7;
  string currency = 8;
  string download_url = 9;
  bytes content = 10;
  string content_type = 11;
  string file_name = 12;
}

message DocumentsResponse {
  repeated DocumentResponse documents = 1;
  PageInfo page_info = 2;
}

enum DocumentType {
  DOCUMENT_TYPE_UNSPECIFIED = 0;
  DOCUMENT_TYPE_INVOICE = 1;
  DOCUMENT_TYPE_DELIVERY_NOTE = 2;
  DOCUMENT_TYPE_PACKING_SLIP = 3;
  DOCUMENT_TYPE_ORDER_CONFIRMATION = 4;
  DOCUMENT_TYPE_QUOTE = 5;
  DOCUMENT_TYPE_CREDIT_NOTE = 6;
  DOCUMENT_TYPE_PROFORMA_INVOICE = 7;
}

// =============================================================================
// Common Enums
// =============================================================================

enum ChangeType {
  CHANGE_TYPE_UNSPECIFIED = 0;
  CHANGE_TYPE_CREATED = 1;
  CHANGE_TYPE_UPDATED = 2;
  CHANGE_TYPE_DELETED = 3;
  CHANGE_TYPE_RESTORED = 4;
}

// =============================================================================
// Sync Service Messages (Hybrid Strategy for Large Catalogs)
// =============================================================================

// Sync Request Messages
message SyncArticlesRequest {
  TenantContext tenant = 1;
  google.protobuf.Timestamp since = 2;  // Incremental sync watermark
  int32 batch_size = 3;  // Default: 1000
  bool include_deleted = 4;  // Include soft-deleted articles
}

message SyncAttributesRequest {
  TenantContext tenant = 1;
  google.protobuf.Timestamp since = 2;
  int32 batch_size = 3;
  repeated string article_ids = 4;  // Optional: sync attributes for specific articles
}

message SyncImagesRequest {
  TenantContext tenant = 1;
  google.protobuf.Timestamp since = 2;
  int32 batch_size = 3;
  repeated string article_ids = 4;  // Optional: sync images for specific articles
}

message SyncCategoriesRequest {
  TenantContext tenant = 1;
  google.protobuf.Timestamp since = 2;
  int32 batch_size = 3;
  bool include_tree = 4;  // Include full category hierarchy
}

message FullSyncRequest {
  TenantContext tenant = 1;
  SyncMode mode = 2;  // FULL or INCREMENTAL
  bool force_restart = 3;  // Restart even if already running
}

enum SyncMode {
  SYNC_MODE_UNSPECIFIED = 0;
  SYNC_MODE_FULL = 1;  // Complete sync (initial load)
  SYNC_MODE_INCREMENTAL = 2;  // Only changed records
}

// Change Request Messages
message GetChangesRequest {
  TenantContext tenant = 1;
  google.protobuf.Timestamp since = 2;
  int32 batch_size = 3;
  bool include_deleted = 4;
}

// Watermark Messages
message GetWatermarkRequest {
  TenantContext tenant = 1;
  string entity_type = 2;  // "articles", "attributes", "images", "categories"
}

message UpdateWatermarkRequest {
  TenantContext tenant = 1;
  string entity_type = 2;
  google.protobuf.Timestamp watermark = 3;
}

message WatermarkResponse {
  string entity_type = 1;
  google.protobuf.Timestamp watermark = 2;
  google.protobuf.Timestamp updated_at = 3;
}

// Sync Status Messages
message GetSyncStatusRequest {
  TenantContext tenant = 1;
  string sync_id = 2;  // Optional: specific sync job
}

message SyncOperationStatusResponse {
  string sync_id = 1;
  SyncOperationState state = 2;
  SyncOperationProgress progress = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp completed_at = 5;
  string error_message = 6;
}

enum SyncOperationState {
  SYNC_OPERATION_STATE_UNSPECIFIED = 0;
  SYNC_OPERATION_STATE_PENDING = 1;
  SYNC_OPERATION_STATE_RUNNING = 2;
  SYNC_OPERATION_STATE_COMPLETED = 3;
  SYNC_OPERATION_STATE_FAILED = 4;
  SYNC_OPERATION_STATE_CANCELLED = 5;
}

message SyncOperationProgress {
  int64 total_records = 1;
  int64 processed_records = 2;
  int64 failed_records = 3;
  string current_entity = 4;  // "articles", "attributes", etc.
  string current_batch = 5;  // "1/50", "2/50", etc.
}

// Sync Response Messages
message SyncResponse {
  string sync_id = 1;
  SyncOperationState state = 2;
  int64 records_processed = 3;
  int64 records_failed = 4;
  google.protobuf.Timestamp watermark_updated = 5;
  repeated string errors = 6;
}

// Change Event Messages (for streaming)
message ArticleChangeEvent {
  string article_id = 1;
  ChangeType change_type = 2;
  google.protobuf.Timestamp changed_at = 3;
  ProductResponse article = 4;  // Full article data for CREATED/UPDATED
}

message AttributeChangeEvent {
  string attribute_id = 1;
  string article_id = 2;
  ChangeType change_type = 3;
  google.protobuf.Timestamp changed_at = 4;
  AttributeResponse attribute = 5;
}

message ImageChangeEvent {
  string image_id = 1;
  string article_id = 2;
  ChangeType change_type = 3;
  google.protobuf.Timestamp changed_at = 4;
  ImageResponse image = 5;
}

message CategoryChangeEvent {
  string category_id = 1;
  ChangeType change_type = 2;
  google.protobuf.Timestamp changed_at = 3;
  CategoryResponse category = 4;
}

// Additional Messages for Sync
message AttributeResponse {
  string id = 1;
  string article_id = 2;
  string name = 3;
  string value = 4;
  string unit = 5;
  int32 sort_order = 6;
  google.protobuf.Timestamp modified_date = 7;
}

message ImageResponse {
  string id = 1;
  string article_id = 2;
  string filename = 3;
  string url = 4;
  string alt_text = 5;
  int32 sort_order = 6;
  google.protobuf.Timestamp modified_date = 7;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string parent_id = 4;
  int32 level = 5;
  int32 sort_order = 6;
  google.protobuf.Timestamp modified_date = 7;
}
